# flagRecompile

./: README.md  cabal.project
foo/: Foo.hs  foo.cabal
plugin/: plugin.cabal
plugin/src/: Plugin.hs
plugin/test/: Spec.hs
