cabal-version:      2.4
name:               plugin
version:            0.1.0.0

author:             Ziyang Liu
maintainer:         unsafeFixIO@gmail.com

library
    hs-source-dirs: src
    exposed-modules:
        Plugin
    build-depends:
        base,
        foo,
        ghc
    default-language: Haskell2010

test-suite plugin-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
        base,
        plugin
